--- a/src/template.html
+++ b/src/template.html
@@ -3,7 +3,9 @@
     <head>
         <title>Test</title>
     </head>
-
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+    </style>
     <body>
         <div id="root"></div>
     </body>
