--- a/demo/index.html
+++ b/demo/index.html
@@ -2,6 +2,7 @@
     <html lang="en">
     <head>
         <title>Test</title>
+        <meta charset="utf-8">
     <script defer src="/main.js"></script></head>
     <body>
         <div id="root"></div>
