--- a/src/template.html
+++ b/src/template.html
@@ -2,6 +2,7 @@
     <html lang="en">
     <head>
         <title>Test</title>
+        <meta charset="utf-8">
     </head>
     <body>
         <div id="root"></div>
